feat: add newbee clusters info
